--- a/style.css
+++ b/style.css
@@ -31,9 +31,13 @@ font-family: 'Poppins', sans-serif;
     width: 50%;
     margin-left: 25%;
 }
+.b-img{
+ 
+    margin-top: 5%;
+}
 .slice{
     border-spacing: 20px;
-    border-left: 3px orangered solid;
+    border-left: 4px orangered solid;
 }
 div{
     border-spacing: 1em;
@@ -64,7 +68,7 @@ span{
     width: 120px;
 }
 .ill-1{
-    background-color: palegoldenrod;
+    background-color: palevioletred;
     margin: 3%;
     padding-right: 5%;
     padding-left: 5%;
@@ -73,7 +77,7 @@ span{
 
 }
 .ill-2{
-    background-color:palegreen;
+    background-color:palegoldenrod;
     margin: 3%;
     padding-right: 5%;
     padding-left: 5%;
@@ -85,8 +89,8 @@ span{
 .ill-3{
     background-color: powderblue;
     margin: 3%;
-    padding-right: 5%;
-    padding-left: 5%;
+    padding-right: 7%;
+    padding-left: 7%;
 
     border-radius: 5%;
 
@@ -168,7 +172,7 @@ input[type=text], select, textarea {
   }
   
   input[type=submit] {
-    background-color: #aa4604;
+    background-color: orangered;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -190,4 +194,7 @@ input[type=text], select, textarea {
   form{
       width: 80;
       margin:10%
+  }
+  .h1{
+      margin-left: 10px;
   }
